# fun

./: .gitignore  LICENSE  meson.build  meson_options.txt
c_cpp/: CMakeLists.txt  hk.hh  math.c  math.cc  md5.c  md5.cc  opengl-cube-frag.glsl  opengl-cube-vert.glsl  opengl-cube.c  opengl-cube.cc  opengl-curve-frag.glsl  opengl-curve-vert.glsl  opengl-text-frag.glsl  opengl-text-post-frag.glsl  opengl-text-vert.glsl  opengl-text.cc  opengl-vector.cc  opengl.cc  opengl.hh  rect-packing.cc  winapi-tray.c  winapi-tray.rc
c_cpp/util/: common.h  math.h
common/: fun.c  fun.h
ffmpeg/: generate_video.c  remux.c
games/: engine.c  engine.h  test.c
opengl/: cube.c  cube.frag  cube.vert  gltf.c
python/: boids.py  multicrop.py
subprojects/: cgltf.wrap
subprojects/packagefiles/cgltf/: meson.build
vulkan/: cube.c
